@@ -1,23 +1,29 @@
 package io.ra6.eldora.plugins;
 
+import com.sun.jdi.event.ExceptionEvent;
 import io.ra6.Eldora;
 import io.ra6.Version;
+import io.ra6.eldora.AbstractEldoraPlugin;
+import io.ra6.eldora.components.EldoraTabComponent;
+import org.jetbrains.annotations.NotNull;
 import org.json.JSONObject;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
-import java.util.logging.Logger;
 import java.util.zip.ZipFile;
 
 //TODO: https://www.codegrepper.com/code-examples/java/java+load+jar+at+runtime
 
 public class PluginHandler {
+
+	private final ArrayList<LoadedPlugin> _loadedPlugins = new ArrayList<>();
 
 	public void loadPlugins(File pluginPath) {
 		var files = pluginPath.listFiles((dir, name) -> name.endsWith(".jar"));
@@ -40,22 +46,40 @@ public class PluginHandler {
 					}
 				}
 			} catch (IOException e) {
-				throw new RuntimeException(e);
 			}
 		}
 	}
 
-	private void loadPlugin(File file, PluginMetadata metadata) throws MalformedURLException {
-		Eldora.LOGGER.info("Loading Plugin {}.", metadata);
+	private void loadPlugin(@NotNull File file, PluginMetadata metadata) {
+		try {
+			Eldora.LOGGER.info("Loading Plugin {}.", metadata);
 
-		var child = new URLClassLoader(
-				new URL[] {file.toURI().toURL()},
-				this.getClass().getClassLoader()
-		);
-		var classToLoad = Class.forName("com.MyClass", true, child);
-		var method = classToLoad.getDeclaredMethod("myMethod");
-		Object instance = classToLoad.newInstance();
-		Object result = method.invoke(instance);
+			URLClassLoader child = null;
+			child = new URLClassLoader(
+					new URL[]{file.toURI().toURL()},
+					this.getClass().getClassLoader()
+			);
+			var classToLoad = Class.forName(metadata.getCompletePackage(), true, child);
+			//if (classToLoad.getDeclaredAnnotation(EldoraPlugin.class) != null) {
+			if (AbstractEldoraPlugin.class.isAssignableFrom(classToLoad)) {
+				AbstractEldoraPlugin instance;
+				try {
+					instance = (AbstractEldoraPlugin) classToLoad.getDeclaredConstructor().newInstance();
+					Eldora.LOGGER.info("Loaded Plugin: {}", instance.getClass().getName());
+					var loadedPlugin = new LoadedPlugin(instance, metadata);
+					_loadedPlugins.add(loadedPlugin);
+				} catch (IllegalAccessException | NoSuchMethodException | NoSuchFieldException e) {
+					Eldora.LOGGER.error("Could not load plugin {}: {}", metadata.getName(), e);
+				}
+			} else {
+				Eldora.LOGGER.error("{} does not extend: {}", metadata.getCompletePackage(), AbstractEldoraPlugin.class.getName());
+			}
+
+			onLoad();
+		} catch (MalformedURLException | ClassNotFoundException |
+		         InstantiationException | InvocationTargetException e) {
+			Eldora.LOGGER.error("Could not load plugin {}: {}", metadata.getName(), e);
+		}
 	}
 
 	private PluginMetadata parseMetadata(File fileName, BufferedReader reader) throws IOException {
@@ -76,6 +100,10 @@ public class PluginHandler {
 			Eldora.LOGGER.error("plugin.json from file {} is invalid! Missing key {}", fileName, "package");
 			return null;
 		}
+		if (!plugin.has("main")) {
+			Eldora.LOGGER.error("plugin.json from file {} is invalid! Missing key {}", fileName, "main");
+			return null;
+		}
 		if (!plugin.has("version")) {
 			Eldora.LOGGER.error("plugin.json from file {} is invalid! Missing key {}", fileName, "version");
 			return null;
@@ -83,6 +111,7 @@ public class PluginHandler {
 
 		var pluginName = plugin.getString("name");
 		var pluginPackage = plugin.getString("package");
+		var pluginMain = plugin.getString("main");
 		var pluginVersion = plugin.getString("version");
 
 		var pluginAuthors = new ArrayList<String>();
@@ -100,6 +129,7 @@ public class PluginHandler {
 		return new PluginMetadata(
 				pluginName,
 				pluginPackage,
+				pluginMain,
 				pluginAuthors.toArray(new String[]{}),
 				new Version(pluginVersion),
 				pluginDescription,
@@ -107,15 +137,63 @@ public class PluginHandler {
 		);
 	}
 
-	private void onEnable() {
+	public void onEnable() {
+		_loadedPlugins.forEach(loadedPlugin -> {
+			try {
+				Eldora.LOGGER.info("Enabling plugin {}", loadedPlugin.getMetadata().getName());
+				loadedPlugin.onEnable();
+				Eldora.LOGGER.info("Enabled plugin {}", loadedPlugin.getMetadata().getName());
+			} catch (Exception e) {
+				Eldora.LOGGER.error("Error enabling plugin {}: {}", loadedPlugin.getMetadata().getName(), e);
+			}
+		});
 	}
 
-	private void onDisable() {
+	public void onDisable() {
+		_loadedPlugins.forEach(loadedPlugin -> {
+			try {
+				Eldora.LOGGER.info("Disabling plugin {}", loadedPlugin.getMetadata().getName());
+				loadedPlugin.onDisable();
+				Eldora.LOGGER.info("Disabled plugin {}", loadedPlugin.getMetadata().getName());
+			} catch (Exception e) {
+				Eldora.LOGGER.error("Error enabling plugin {}: {}", loadedPlugin.getMetadata().getName(), e);
+			}
+		});
 	}
 
-	private void onLoad() {
+	public void onLoad() {
+		_loadedPlugins.forEach(loadedPlugin -> {
+			try {
+				Eldora.LOGGER.info("Loading plugin {}", loadedPlugin.getMetadata().getName());
+				loadedPlugin.onLoad();
+				Eldora.LOGGER.info("Loaded plugin {}", loadedPlugin.getMetadata().getName());
+			} catch (Exception e) {
+				Eldora.LOGGER.error("Error enabling plugin {}: {}", loadedPlugin.getMetadata().getName(), e);
+			}
+		});
 	}
 
-	private void onUnload() {
+	public void onUnload() {
+		_loadedPlugins.forEach(loadedPlugin -> {
+			try {
+				Eldora.LOGGER.info("Unloading plugin {}", loadedPlugin.getMetadata().getName());
+				loadedPlugin.onUnload();
+				Eldora.LOGGER.info("Unloaded plugin {}", loadedPlugin.getMetadata().getName());
+			} catch (Exception e) {
+				Eldora.LOGGER.error("Error enabling plugin {}: {}", loadedPlugin.getMetadata().getName(), e);
+			}
+		});
+	}
+
+	public ArrayList<EldoraTabComponent> getAllTabs() {
+		var result = new ArrayList<EldoraTabComponent>();
+		for (LoadedPlugin loadedPlugin : _loadedPlugins) {
+			Eldora.LOGGER.info("Adding tabs of plugin {}", loadedPlugin.getMetadata().getName());
+			for (EldoraTabComponent tab : loadedPlugin.getPluginInstance().getEldoraTabComponents()) {
+				Eldora.LOGGER.info("Adding {}", tab.tabName());
+				result.add(tab);
+			}
+		}
+		return result;
 	}
 }
